Release history for Dist-Zilla-Plugin-Author-KENTNL-CONTRIBUTING

{{$NEXT}}

0.001003 2015-06-30T05:57:29Z 56a04ee
 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - runtime: +2 -3

 [Features]
 - Reimplement in terms of GenerateFile::ShareDir

0.001002 2015-06-30T02:08:26Z 473269e
 [Bugfix]
 - Turns out to be useful to actually install files intended for a sharedir

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: +1 (recommends: +1)
 - develop: +1

0.001001 2015-06-30T00:24:44Z 24a9a5d
 [Content]
 - Credit original author in emitted file.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +1 -1

0.001000 2015-06-29T23:35:19Z 9e726b2
 - First version.