@@ -40,7 +40,7 @@ order_by = name
 exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
-exclude_filename = CONTRIBUTING.mkdn
+exclude_filename = CONTRIBUTING.pod
 exclude_filename = LICENSE
 exclude_filename = Makefile.PL
 exclude_filename = CONTRIBUTING.pod
@@ -58,9 +58,10 @@ include_dotfiles = 1
 :version = 0.001002
 
 [Author::KENTNL::CONTRIBUTING / @Author::KENTNL/Author::KENTNL::CONTRIBUTING]
-:version = 0.001002
+-location = root
+-phase = build
+:version = 0.001003
 document_version = 0.1
-format = mkdn
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -100,7 +101,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.025000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025001
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -191,7 +192,7 @@ modules = Dist::Zilla::App::Command::bakeini
 ; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
-Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001002
+Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001003
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
 Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
