@@ -1,6 +1,15 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.001004
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.025000 → 2.025001
+
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::GenerateFile::ShareDir 0 → 0.006
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Role::AfterBuild
+ - Dist::Zilla::Role::FilePruner
 
 0.001003 2015-06-30T05:57:29Z
  [Added / develop requires]
