@@ -1,6 +1,17 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-CONTRIBUTING
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001003, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
+ - runtime: ↑1 -2
+
+ [Features]
+ - Reimplemented some remaning parts to just use new features in GenerateFile::ShareDir 0.006
+
+ [Todo]
+ - Eliminate need for this module at some point without needing my bundle also somehow with some intermediary magic
+   that will just call GF:SD outside the normal dzil things(!??)
 
 0.001003 2015-06-30T05:57:29Z 56a04ee
  [Dependencies::Stats]
